# raft-haskell

./: .gitignore  README.md  nodes.cfg  raft.cabal  stack.yaml
app/: Handlers.hs  Main.hs  Node.hs  Types.hs
src/: Handlers.hs  NetworkUtils.hs  Types.hs  Utils.hs
test/: HandlersTest.hs  Spec.hs
