name:                raft
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/raft#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7.1,
                       unbounded-delays >= 0.1.0.10,
                       unbounded-delays >= 0.1.0.10
  default-language:    Haskell2010

executable raft-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.8.3.0
                     , bytestring >= 0.10.8.1
                     , concurrent-extra == 0.7.0.10
                     , containers >= 0.5.7.1
                     , derive >= 2.6.2
                     , distributed-process >= 0.6.6
                     , lens
                     , network >= 2.6.3.1
                     , network-transport >= 0.4.4.0
                     , network-transport-tcp >= 0.5.1
                     , raft
  default-language:    Haskell2010

test-suite raft-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary >= 0.8.3.0
                     , raft
                     , unbounded-delays >= 0.1.0.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/raft
